--- a/app/sap-cap-ui5-challenge/webapp/manifest.json
+++ b/app/sap-cap-ui5-challenge/webapp/manifest.json
@@ -17,7 +17,7 @@
         },
         "dataSources": {
             "mainService": {
-                "uri": "/dev-challenge/",
+                "uri": "/odata/v4/dev-challenge/",
                 "type": "OData",
                 "settings": {
                     "annotations": [],
